--- a/BookManagementSystem_MVC_14042024/Views/Publisher/Create.cshtml
+++ b/BookManagementSystem_MVC_14042024/Views/Publisher/Create.cshtml
@@ -1,43 +1,36 @@
 ﻿@model BookManagementSystem_MVC_14042024.Models.PublisherModel
-@{
-    Layout = null;
-}
 
-<!DOCTYPE html>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Create</title>
-</head>
-<body>
-    <form method="post">
-        <div>
-            <table>
-                <tr>
-                    <th>Registration Id</th>
-                    <td>
-                        @*<input type="text" name="RegistrationId" />*@
-                        @*@Html.TextBox("RegistrationId")*@
-                        @Html.TextBoxFor(x => x.RegistrationId)
-                    </td>
-                </tr>
-                <tr>
-                    <th>Publication Name</th>
-                    <td>
-                        @*<input type="text" name="PublicationName" />*@
-                        @*@Html.TextBox("PublicationName")*@
-                        @Html.TextBoxFor(x => x.PublisherName)
-                    </td>
-                </tr>
-                <tr>
-                    <td colspan="2">
-                        <input type="submit" value="Save" />
-                    </td>
-                </tr>
-            </table>
+
+        <div class="row">
+            <div class="col-6 offset-3">
+                <form method="post">
+                    <div>
+                        <table>
+                            <tr>
+                                <th>Registration Id</th>
+                                <td>
+                                    @*<input type="text" name="RegistrationId" />*@
+                                    @*@Html.TextBox("RegistrationId")*@
+                                    @Html.TextBoxFor(x => x.RegistrationId,new {@class="form-control"})
+                                </td>
+                            </tr>
+                            <tr>
+                                <th>Publication Name</th>
+                                <td>
+                                    @*<input type="text" name="PublicationName" />*@
+                                    @*@Html.TextBox("PublicationName")*@
+                                    @Html.TextBoxFor(x => x.PublisherName, new { @class = "form-control" })
+                                </td>
+                            </tr>
+                            <tr>
+                                <td colspan="2">
+                                    <input type="submit" value="Save" />
+                                </td>
+                            </tr>
+                        </table>
+                    </div>
+                </form>
+            </div>
         </div>
-    </form>
    
-</body>
-</html>
