--- a/BookManagementSystem_MVC_14042024/Views/Shared/_Layout.cshtml
+++ b/BookManagementSystem_MVC_14042024/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
     <script src="~/Content/toastr/toastr.min.js"></script>
 </head>
 <body>
-    <h2>This is content from Layout Page</h2>
+    <h2>This is content from Layout Page - Changed in AuthorFeature Branch</h2>
     <div class="container-fluid">
         @RenderBody()
     </div>
